Open Mason & Stonebreak: Fixed cow hardcoded geometry translations. Replaced JavaFX in Open Mason with ImGui and LWJGL